# FPGA_Router

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_STRUCTURE.txt  README.md  deviceFormat.txt  eval  inputFormat.txt  netlistFormat.txt  outputFormat.txt  setup.sh
.github/workflows/: cross-platform.yml
IOFormat/: netlistFormat.txt
cmake/: DownloadDependencies.cmake  ExternalLibraries.cmake
src/: DataType.hpp  main.cpp
src/Exporter/: Exporters.hpp  SimpleExporter.cpp  SimpleExporter.hpp
src/Interfaces/: IExporter.hpp  IReader.hpp  IRouter.hpp
src/Reader/: MTedExtLibReader.cpp  MTedExtLibReader.hpp  Readers.hpp  SimpleReader.cpp  SimpleReader.hpp
src/Router/: Routers.hpp  STNoViolationRouter.cpp  STNoViolationRouter.hpp  STRRRRouter.cpp  STRRRRouter.hpp
